# skim

./: configure.in.in
doc/en/: index.docbook  list.docbook
doc/nl/: Makefile.am  index.docbook  list.docbook
