KDE_DOCS = skim
KDE_LANG = en

KDE_NOCHUNK_STYLESHEET="/usr/kde/3.3/share/apps/ksgmltools2/customization/kde-nochunk.xsl"
web: $(srcdir)/index.docbook list.docbook $(KDE_XSL_STYLESHEET) kdesystray.png setupwindow.png inputwindow.png index.docbook list.docbook mainwindow.png skim01a.png skim02.png skim04a.png skim24c.png slim_choose_ime.png skim_configuration1.png skim_configuration2.png skim_configuration3.png skim_configuration4.png skim_configuration5.png skim_configuration6.png skim_configuration7.png skim_configuration8.png skim_configuration9.png skim_configuration10.png skim_configuration11.png skim_configuration12.png skim_configuration13.png skim_configuration14.png skim_configuration15.png skim_configuration16.png skim_configuration17.png skim_configuration18.png skim_configuration19.png skim_configuration110.png skim_configuration112.png skim_toolbar1.png skim_toolbar3.png skim_toolbar4.png skim_toolbar6.png skim_contextmenu.png
	@if test -n "$(MEINPROC)"; then echo $(MEINPROC) --stylesheet $(KDE_NOCHUNK_STYLESHEET) $(srcdir)/index.docbook list.docbook; $(MEINPROC) --stylesheet $(KDE_NOCHUNK_STYLESHEET) $(srcdir)/index.docbook; list.docbook fi
